[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "OpenEnv-compliant email triage environment for AI agent training"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenEnv Team"}
]
keywords = ["openenv", "email-triage", "ai-environment", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "cryptography>=41.0.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
ui = [
    "gradio>=6.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server"]

[project.urls]
Homepage = "https://github.com/hooiv/emailtriage"
Repository = "https://github.com/hooiv/emailtriage"
Documentation = "https://github.com/hooiv/emailtriage/blob/main/README.md"
"Bug Tracker" = "https://github.com/hooiv/emailtriage/issues"
